--- a/static/style.css
+++ b/static/style.css
@@ -40,18 +40,16 @@ body {
     cursor: pointer;
     padding: 15px;
     border-radius: .25rem;
-    animation-name: openScrollBtn;
-    animation-duration: 1s;
+    animation: openScrollBtn .8s;
 }
 
-#scrollToTop:hover {
+#scrollToTop:focus {
     background-color: #888;
 }
 
 @keyframes openScrollBtn {
     from {
         opacity: 0;
-    }
     to {
         opacity: 1;
     }
